Fixed text alignment to the center in first sec

--- a/geneever/style.css
+++ b/geneever/style.css
@@ -1,46 +1,46 @@
-/*html, body, div, span, applet, object, iframe,*/
-/*h1, h2, h3, h4, h5, h6, p, blockquote, pre,*/
-/*a, abbr, acronym, address, big, cite, code,*/
-/*del, dfn, em, img, ins, kbd, q, s, samp,*/
-/*small, strike, strong, sub, sup, tt, var,*/
-/*b, u, i, center,*/
-/*dl, dt, dd, ol, ul, li,*/
-/*fieldset, form, label, legend,*/
-/*table, caption, tbody, tfoot, thead, tr, th, td,*/
-/*article, aside, canvas, details, embed,*/
-/*figure, figcaption, footer, header, hgroup,*/
-/*menu, nav, output, ruby, section, summary,*/
-/*time, mark, audio, video {*/
-/*	margin: 0;*/
-/*	padding: 0;*/
-/*	border: 0;*/
-/*	font-size: 100%;*/
-/*	font: inherit;*/
-/*	vertical-align: baseline;*/
-/*}*/
-/* HTML5 display-role reset for older browsers*/
-/*article, aside, details, figcaption, figure,*/
-/*footer, header, hgroup, menu, nav, section {*/
-/*	display: block;*/
-/*}*/
-/*body {*/
-/*	line-height: 1;*/
-/*}*/
-/*ol, ul {*/
-/*	list-style: none;*/
-/*}*/
-/*blockquote, q {*/
-/*	quotes: none;*/
-/*}*/
-/*blockquote:before, blockquote:after,*/
-/*q:before, q:after {*/
-/*	content: '';*/
-/*	content: none;*/
-/*}*/
-/*table {*/
-/*	border-collapse: collapse;*/
-/*	border-spacing: 0;*/
-/*}*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+/* article, aside, details, figcaption, figure, */
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
 
 body {
   font-family: 'Raleway', sans-serif;
@@ -51,25 +51,40 @@ a {
   text-decoration: none;
 }
 
-h1 {font-size:30px;}
-h2 {font-size:25px;}
-h3 {font-size:20px;}
+h1 {font-size:40px;}
+h2 {font-size:35px;}
+h3 {font-size:25px;}
 
-p {font-size:15px;}
+p {font-size:20px;}
 
 
 .top-bar {
   width:100%;
   height:8em;
-  
+
   background-color:#fcfcfc;
-  
-  
+
+
   display:flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
   flex-wrap: nowrap;
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (max-width: 600px) {
+  .top-bar {
+    flex-direction: column;
+    flex-wrap:wrap;
+    align-content: center;
+    justify-content:center;
+    height:10em;
+  }
+
+  .top-bar .nav-bar {
+    padding-top:15px;
+  }
 }
 
 .top-bar .logo h1 {
@@ -83,19 +98,23 @@ p {font-size:15px;}
 
 .top-bar .nav-bar a {
   font-size:20px;
-  
+
   margin:1em;
 }
 
-.top-bar .nav-bar #learn-more {
-  /*border:1.3px solid black;*/
-  /*border-radius:20px;*/
+.top-bar .nav-bar #learn-more, .fiftyfifty a {
+  border:2px solid #2565AE;
+  border-radius:20px;
+  padding:10px;
+
+  background-color:#2565AE;
+  color:white;
 }
 
 .section-one {
   height:50vh;
   background-color:red;
-  
+
   display:flex;
   align-items: center;
 }
@@ -112,13 +131,21 @@ DNA bildet i først seksjonen*/
 /*}*/
 
 .fiftyfifty {
-  width:50%; height:50vh; background-color:blue;
-  
+  width:50%; height:50vh; background-color:#fcfcfc;
+
+  overflow:hidden;
+
+  text-align:left;
   display:flex;
   flex-wrap:wrap;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items:center;
-  align-content: center;
+  justify-content: center;
+  align-items:flex-start;
+  align-content: flex-start;
   /*display:inline-block;*/
+}
+
+.section-two {
+  width:100%;
+  height:50vh;
 }
